--- a/common.ca.po
+++ b/common.ca.po
@@ -8668,8 +8668,8 @@ msgstr ""
 #: qcsrc/menu/xonotic/dialog_firstrun.qc:84
 msgid "Allow player statistics to use your nickname at stats.xonotic.org?"
 msgstr ""
-"Permetre que les estadístiques de jugador utilitzin el teu sobrenom en stats."
-"xonotic.org?"
+"Permetre que les estadístiques de jugador utilitzin el teu sobrenom en "
+"stats.xonotic.org?"
 
 #: qcsrc/menu/xonotic/dialog_firstrun.qc:90
 msgid "Undecided"
