--- a/common.es.po
+++ b/common.es.po
@@ -8838,8 +8838,8 @@ msgstr "Texto del idioma:"
 #: qcsrc/menu/xonotic/dialog_firstrun.qc:84
 msgid "Allow player statistics to use your nickname at stats.xonotic.org?"
 msgstr ""
-"¿Permitir que las estadísticas de jugador utilicen tu apodo en stats.xonotic."
-"org?"
+"¿Permitir que las estadísticas de jugador utilicen tu apodo en "
+"stats.xonotic.org?"
 
 #: qcsrc/menu/xonotic/dialog_firstrun.qc:90
 msgid "Undecided"
