--- a/common.sr.po
+++ b/common.sr.po
@@ -16,8 +16,8 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-11-22 07:22+0100\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: Марко М. Костић (Marko M. Kostić) <marko.m.kostic@gmail."
-"com>, 2017,2019\n"
+"Last-Translator: Марко М. Костић (Marko M. Kostić) "
+"<marko.m.kostic@gmail.com>, 2017,2019\n"
 "Language-Team: Serbian (http://app.transifex.com/team-xonotic/xonotic/"
 "language/sr/)\n"
 "Language: sr\n"
